test/errors/293-fatalerror/671.tex
% tex -interaction=nonstopmode
%% 671 => "*** (job aborted file error in nonstop mode)"

\input notexsit

%> *** (job aborted, file error in nonstop mode)